--- a/docs/files/cmf/locales/en.php.txt
+++ b/docs/files/cmf/locales/en.php.txt
@@ -1,4 +1,16 @@
 <?php
+/** CMF English Locale */
+
+/**
+ * CMF English Locale
+ *
+ * CMF English Locale
+ *
+ * @package    CMF
+ * @copyright  http://goldencms.com
+ * @license    http://goldencms.com/license.txt  MIT License
+ */
+
 return array(
 'lang_name'			=>	'English', 	/** Language name in english (Latin): https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes */
 'native_lang_name'	=>	'English', 	/** Language name in Native Name (Local language): https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes */
