--- a/docs/files/cmf/modules/core/locales/fa.php.txt
+++ b/docs/files/cmf/modules/core/locales/fa.php.txt
@@ -8,7 +8,7 @@
  *
  * @package    CMF
  * @copyright  http://goldencms.com
- * @license    http://www.php.net/license/3_01.txt  PHP License 3.01
+ * @license    http://goldencms.com/license.txt  MIT License
  */
 
 return array(
