--- a/docs/files/cmf/locales/fa.php.txt
+++ b/docs/files/cmf/locales/fa.php.txt
@@ -1,4 +1,16 @@
 <?php
+/** CMF Core Persian Locale */
+
+/**
+ * CMF Core Persian Locale
+ *
+ * CMF Core Persian Locale
+ *
+ * @package    Index
+ * @copyright  http://goldencms.com
+ * @license    http://goldencms.com/license.txt  MIT License
+ */
+
 return array(
 'lang_name'			=>	'Persian', 	/** Language name in english (Latin): https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes */
 'native_lang_name'	=>	'فارسی', 	/** Language name in Native Name (Local language): https://en.wikipedia.org/wiki/List_of_ISO_639-1_codes */
